--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx}\" --cache"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.10.2",
+    "@prisma/extension-accelerate": "^1.0.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
@@ -19,17 +22,21 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@vercel/analytics": "^1.2.2",
     "@vercel/kv": "^1.0.1",
+    "@vercel/postgres": "^0.7.2",
     "ai": "3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "d3-scale": "^4.0.2",
     "date-fns": "^3.3.1",
     "geist": "^1.2.2",
+    "html-to-image": "^1.11.11",
     "next": "14.1.2",
     "next-themes": "^0.2.1",
     "openai": "^4.27.0",
+    "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
     "react-intersection-observer": "^9.8.0",
     "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^2.2.1",
