--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx}\"",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx}\" --cache"
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx}\" --cache",
+    "generate": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
